apps/external/backup/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backup
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.47
  ports:
    - name: https
      port: 8007
      targetPort: 8007
