apps/external/backup/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backup
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backup.joejad.com`)
      kind: Rule
      services:
        - name: backup
          port: 8007
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
